[fix] margin main-wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,7 @@ header {
 .main-wrap {
   flex-wrap: wrap;
   padding-top: 60px;
-  margin: 20px auto;
+  margin: 40px auto;
   width: 98%;
 }
 
